# Schr-dinger-Approximation

./: .gitignore  .vim  CMakeLists.txt  Cargo.toml  README.md  airy.txt  build.rs  data.txt  energy.txt  energy.wsl  exact.wsl  plot.gnuplot  plot_3d.gnuplot
GoImpl/: data.txt  integ_test.go  main.go
GoImpl/benchmark/: benchmark.cpp
GoImpl/trying/: Ca_Cb.go
Schroedinger/: Cargo.toml  build.rs  data.txt
Schroedinger/lib/: libairy.h
Schroedinger/src/: airy.rs  airy_wave_func.rs  main.rs  newtons_method.rs
experimenting/: complex.py  complex_plot.el  out.txt
lib/: build.sh  go.mod  libairy.h  main.go
src/: airy.rs  airy_wave_func.rs  benchmarks.rs  check.rs  energy.rs  integrals.rs  main.rs  newtons_method.rs  plot.rs  potentials.rs  tui.rs  turning_points.rs  utils.rs  wave_function_builder.rs  wkb_wave_func.rs
src/sa/: constants.h  integration.h  main.cpp  pch.h  potential.cpp  potential.h
test/: CMakeLists.txt  main.cpp  pch.h
