[package]
name = "shroedinger_approx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
tokio = { version = "1.0.3", features = ["full"] }
rayon = "1.5.3"
scilib = "0.5.0"

[build-dependencies]
bindgen = "0.60.1"